--- a/src/app/inicio/info/info.component.html
+++ b/src/app/inicio/info/info.component.html
@@ -1,5 +1,12 @@
 <div>
     <div class="tt">
+        <mat-icon class="ic">phone</mat-icon> Contato
+    </div>
+    <div> {{ dadosEmpresa.telefone }} </div>
+</div>
+
+<div>
+    <div class="tt">
         <mat-icon class="ic">av_timer</mat-icon> Estimativa de entrega
     </div>
     <div> {{ dadosEmpresa.tempoentrega }} </div>
