--- a/src/app/conta_usuario/orders-user/orders-user.component.html
+++ b/src/app/conta_usuario/orders-user/orders-user.component.html
@@ -13,12 +13,13 @@
 
 
             <div class="row order" style="align-items: center;" *ngFor="let item of orders">
-                <div class="col-sm-3">
-                    <img class="img img-fluid" style="max-width: 40%;" [lazyLoad]="item.dadosempresa.imagem">
+                <div class="col-sm-2">
+                    <img class="img img-fluid" style="max-width: 40%; border-radius: 10px;" [lazyLoad]="item.dadosempresa.imagem">
                 </div>
-                <div class="col-sm-5">
+                <div class="col-sm-6">
+                    <mat-progress-bar *ngIf="item.status_pedido === '0' || item.status_pedido === '1' || item.status_pedido === '2'" mode="query"></mat-progress-bar>
                     <div class="col-sm-12 status-order"> {{ item.status_texto }} </div>
-                    <div class="col-sm-12"> {{ item.info }} às {{ item.horario }} </div>
+                    <div class="col-sm-12" style="font-size: 12px;"> Pedido #{{ item.id }} {{ item.info }} às {{ item.horario }} </div>
                     <div class="col-sm-12"> {{ item.dadosempresa.nome }} </div>
                     <div class="col-sm-12"> {{ item.total | currency:'BRL':true }} </div>
                 </div>
