--- a/src/app/inicio/assessments/assessments.component.html
+++ b/src/app/inicio/assessments/assessments.component.html
@@ -1,22 +1,22 @@
-<div class=" col-sm-12">
+<div class=" col-sm-12 mp0R mp0L">
     <h1>Avaliações</h1>
 </div>
-<div class="c2 col-sm-12">
+<div class="c2 col-sm-12 mp0R mp0L">
     {{ service.getDadosEmpresa().nota.nota }} ({{ service.getDadosEmpresa().nota.totalavals }}) avaliações para {{ service.getDadosEmpresa().nome }}
 </div>
 
-<div class="item-assessment col-sm-12" *ngFor="let item of itens">
+<div class="item-assessment col-sm-12 " *ngFor="let item of itens">
     <div class="item-assessment-1 col-sm-12"> {{ item.nome }} </div>
     <div class="item-assessment-2 col-sm-12">
         <div class="cor1"> {{ item.nota }} </div>
         <div>
             <mat-icon class="cor1" *ngFor='let in of counter(item.nota) ;let i = index'>star</mat-icon>
         </div>
-        <div> {{ item.texto }} </div>
+        <div> </div>
 
 
     </div>
-    <div class="item-assessment-3 col-sm-12">Entrega super rápida</div>
+    <div class="item-assessment-3 col-sm-12"> {{ item.texto }} </div>
     <div class="item-assessment-4 col-sm-12">
         <div> Resposta - {{ service.getDadosEmpresa().nome }} </div>
         <div>
