--- a/src/app/inicio/itens-merchant/itens-merchant.component.html
+++ b/src/app/inicio/itens-merchant/itens-merchant.component.html
@@ -6,13 +6,22 @@
             </div>
         </div>
 
-        <div class="col-sm-12 mp0L dad astr">
+        <!--<div class="col-sm-12 mp0L dad astr">
             <mat-icon class="cor1">star</mat-icon><span class="cor1"> {{ service.getDadosEmpresa().nota.nota }}
-      </span> <span class="hiddenEl">({{ service.getDadosEmpresa().nota.totalavals }} Avaliações)</span>
-        </div>
+      </span> <span class="hiddenEl" style="color: rgb(105, 105, 105);"> ({{ service.getDadosEmpresa().nota.totalavals }} Avaliações)</span>
+        </div>-->
 
         <div class="c1 col-sm-12 mp0L dad">
-            {{ service.getDadosEmpresa().nome }}
+            <div>
+                {{ service.getDadosEmpresa().nome }}
+            </div>
+
+            <div class="col-sm-12 mp0L dad astr" style="font-size: 13px;">
+                <mat-icon class="cor1">star</mat-icon><span class="cor1"> {{ service.getDadosEmpresa().nota.nota }}
+        </span> <span class="hiddenEl" style="color: rgb(105, 105, 105);">
+          ({{ service.getDadosEmpresa().nota.totalavals }} Avaliações)</span>
+            </div>
+
         </div>
 
         <div class="c2 col-sm-12 mp0L dad">
@@ -24,17 +33,17 @@
         </div>
 
 
-        <div class="c4 col-sm-12 mp0L">
+        <div class="c4 col-sm-12 mp0L" style="margin-bottom: 10px;">
 
             <div class="example-action-buttons">
             </div>
             <mat-accordion class="example-headers-align" multi>
 
-                <!--<mat-expansion-panel>
+                <mat-expansion-panel>
 
                     <mat-expansion-panel-header>
                         <mat-panel-title>
-                            Ver mais
+                            Informações da loja
                         </mat-panel-title>
                         <mat-panel-description>
 
@@ -43,49 +52,47 @@
 
                     <app-info [dadosEmpresa]="service.getDadosEmpresa()"></app-info>
 
-                </mat-expansion-panel>-->
+                </mat-expansion-panel>
 
 
 
             </mat-accordion>
 
         </div>
-
+        <!--Filtros-->
         <div class="col-sm-12">
             <div class="row">
-                <div class="col-sm-6">
-                    <mat-form-field style="width:100%; margin-top: 4px;">
-                        <mat-label>Filtrar catálogo</mat-label>
-                        <mat-select #catalogoFilter>
-                            <mat-option value="">
-                                Sem filtro
-                            </mat-option>
-                            <mat-option *ngFor="let item of service.getDadosEmpresa().categorias" [value]="item.id">
-                                {{ item.nome }}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </div>
-
-                <div class="col-sm-6 searchprodmob">
-                    <div class="col-sm-12 c5 item2faz" id="item2fix">
-
-                        <mat-form-field class="infiltroi" color="primary">
-                            <mat-label> Filtrar item </mat-label>
-                            <input matInput placeholder="Nome do item" #filterProduct>
-                            <mat-icon matSuffix>search</mat-icon>
+                <div class="col-sm-12 row picks">
+                    <div class="col-sm-6">
+                        <mat-form-field style="width:100%; margin-top: 4px;">
+                            <mat-label>Filtrar catálogo</mat-label>
+                            <mat-select #catalogoFilter>
+                                <mat-option value="">
+                                    Sem filtro
+                                </mat-option>
+                                <mat-option *ngFor="let item of service.getDadosEmpresa().categorias" [value]="item.id">
+                                    {{ item.nome }}
+                                </mat-option>
+                            </mat-select>
                         </mat-form-field>
+                    </div>
 
+                    <div class="col-sm-6 searchprodmob">
+                        <div class="col-sm-12 c5 item2faz" id="item2fix">
+
+                            <mat-form-field class="infiltroi" color="primary">
+                                <mat-label> Filtrar item </mat-label>
+                                <input matInput placeholder="Nome do item" #filterProduct>
+                                <mat-icon matSuffix>search</mat-icon>
+                            </mat-form-field>
+
+                        </div>
                     </div>
                 </div>
+
             </div>
         </div>
-
-
-
-
-
-
+        <!--Filtros-->
 
     </div>
 
@@ -115,7 +122,7 @@
                                 </div>
 
                                 <div class="col-sm-5">
-                                    <div class="item-bg-img" [lazyLoad]="product.imagem"></div>
+                                    <div class="item-bg-img" [class.product_unavailable]="product.esgotado || product.esconder" [lazyLoad]="product.imagem"></div>
                                 </div>
 
                             </div>
@@ -135,7 +142,6 @@
 
     <!--produtos para mobile-->
     <div *ngFor="let item of service.getDadosEmpresa().categorias | name:catalogoFilter.value" class="elementMobileShow">
-
         <div class="stycatItem"> {{ item.nome }} </div>
 
         <div class="itemProduct" *ngFor="let product of item.itens | filterId:filterProduct.value" (click)="openItem(product)">
@@ -149,7 +155,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="iimgpod" [lazyLoad]="product.imagem"> </div>
+                <div class="iimgpod" [class.product_unavailable]="product.esgotado || product.esconder" [lazyLoad]="product.imagem"> </div>
             </div>
 
             <div class="ipriceprod"> {{ product.preco | currency:'BRL':true }}
@@ -157,19 +163,17 @@
             </div>
             <div class="lineitea"></div>
         </div>
-
-
-
     </div>
+    <!--produtos para mobile-->
 
 
     <div class="col-sm-12 bMobile" style="margin-top:100px;">
         <mat-divider></mat-divider>
     </div>
 
-    <div class="row bMobile">
+    <div class="col-sm-12">
 
-        <div class="a-assessments col-sm-12 bMobile">
+        <div class="a-assessments bMobile mp0R mp0L">
             <app-assessments></app-assessments>
         </div>
 
